# AI-Agents-Training

./: README.md  pyproject.toml  rag_advanced.ipynb  rag_basic.ipynb  rag_vectordb.ipynb
dummy_data/: RAG_TEMPLATE.txt
session2/: Session2_AI_Agent_Course_Hands_On.ipynb
